--- a/package.json
+++ b/package.json
@@ -35,12 +35,16 @@
     "zadeh": "3.0.0-beta.4"
   },
   "devDependencies": {
+    "eslint": "^8.45.0",
     "@types/atom": "^1.40.11",
     "@types/jasmine": "^4.0.0",
     "@types/node": "^17.0.0",
     "@types/rimraf": "^3.0.2",
     "atom-jasmine3-test-runner": "^5.2.9",
-    "eslint-config-atomic": "1.17.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-atomic": "^1.19.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "prettier-config-atomic": "^3.0.1",
     "shx": "^0.3.3",
     "spawk": "^1.7.1",
