--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "zadeh": "3.0.0-beta.4"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
     "@types/atom": "^1.40.11",
     "@types/jasmine": "^4.0.0",
     "@types/node": "^17.0.0",
     "@types/rimraf": "^3.0.2",
     "atom-jasmine3-test-runner": "^5.2.9",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "patch-package": "^8.0.0",
     "shx": "^0.3.3",
     "spawk": "^1.7.1",
     "standard-language-server": "^0.1.0",
