Fix eslint config

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@types/jasmine": "^4.0.0",
     "@types/node": "^17.0.0",
     "@types/rimraf": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "atom-jasmine3-test-runner": "^5.2.9",
-    "eslint": "^8.45.0",
+    "eslint": "^8.46.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
