--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "zadeh": "3.0.0-beta.4"
   },
   "devDependencies": {
-    "@types/atom": "^1.40.11",
+    "@types/atom": "1.40.11",
     "@types/jasmine": "^4.0.0",
     "@types/node": "^17.0.0",
     "@types/rimraf": "^3.0.2",
