--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "atom-languageclient",
+  "name": "@savetheclocktower/atom-languageclient",
   "version": "1.16.1",
-  "description": "Integrate Language Servers with Atom",
-  "repository": "https://github.com/atom-ide-community/atom-languageclient",
+  "description": "Integrate Language Servers with Pulsar (fork of atom-languageclient)",
+  "repository": "https://github.com/savetheclocktower/atom-languageclient",
   "license": "MIT",
   "main": "./build/lib/main",
   "types": "./build/lib/main.d.ts",
@@ -18,7 +18,7 @@
     "copy.typings": "shx cp -r ./typings ./build",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
-    "prepare": "npm run clean && tsc --version && npm run compile",
+    "prepare": "npm run clean && npm run compile",
     "test": "npm run compile && atom --test build/test",
     "test.format": "prettier . --check",
     "test.lint": "eslint .",
