--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "npm run clean && npm run compile",
     "clean": "shx rm -rf build && mkdirp build",
-    "compile": "npm run copy.typings && tsc || echo 'OK'",
+    "compile": "npm run copy.typings && tsc",
     "copy.typings": "shx cp -r ./typings ./build",
     "format": "prettier --write .",
     "lint": "eslint . --fix",
