--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write .",
     "lint": "eslint . --fix",
     "prepare": "npm run clean && npm run compile",
-    "test": "npm run compile && atom --test build/test",
+    "test": "npm run compile && pulsar --test build/test",
     "test.format": "prettier . --check",
     "test.lint": "eslint .",
     "watch": "npm run compile -- --watch",
