--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
   },
   "dependencies": {
     "atom-ide-base": "^3.3.0",
+    "fuzzaldrin": "^2.1.0",
     "patch-package": "^8.0.0",
     "rimraf": "^3.0.2",
     "vscode-jsonrpc": "6.0.0",
-    "vscode-languageserver-protocol": "3.16.0",
-    "vscode-languageserver-types": "3.16.0",
-    "zadeh": "3.0.0-beta.4"
+    "vscode-languageserver-protocol": "^3.17.0",
+    "vscode-languageserver-types": "^3.17.0"
   },
   "devDependencies": {
     "@types/atom": "1.40.12",
+    "@types/fuzzaldrin": "^2.1.7",
     "@types/jasmine": "^4.0.0",
     "@types/node": "^17.0.0",
-    "@types/rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "atom-jasmine3-test-runner": "^5.2.9",
