--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "atom-ide-base": "^3.3.0",
     "fuzzaldrin": "^2.1.0",
+    "minimatch": "^7.4.6",
     "patch-package": "^8.0.0",
     "rimraf": "^3.0.2",
     "vscode-jsonrpc": "6.0.0",
@@ -39,7 +40,7 @@
     "@types/atom": "1.40.12",
     "@types/fuzzaldrin": "^2.1.7",
     "@types/jasmine": "^4.0.0",
-    "@types/node": "^17.0.0",
+    "@types/node": "^20.11.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "atom-jasmine3-test-runner": "^5.2.9",
@@ -50,7 +51,7 @@
     "shx": "^0.3.3",
     "spawk": "^1.7.1",
     "standard-language-server": "^0.1.0",
-    "typescript": "~4.6.0"
+    "typescript": "^5.8.3"
   },
   "atomTestRunner": "./test/runner"
 }
