--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "atom-ide-base": "^3.3.0",
     "fuzzaldrin": "^2.1.0",
+    "just-safe-get": "^4.2.0",
     "minimatch": "^7.4.6",
     "patch-package": "^8.0.0",
     "rimraf": "^3.0.2",
